支持 ssr 格式的 URL 导入

--- a/V2rayU/Base.lproj/ConfigWindow.xib
+++ b/V2rayU/Base.lproj/ConfigWindow.xib
@@ -207,10 +207,10 @@ Gw
                                                             <action selector="browseFile:" target="-2" id="cfx-wb-sdZ"/>
                                                         </connections>
                                                     </button>
-                                                    <textField toolTip="vmess:// or ss:// or http:// or file://" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5cY-nr-cxd">
+                                                    <textField toolTip="vmess:// or ss:// or ssr:// or http:// or file://" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5cY-nr-cxd">
                                                         <rect key="frame" x="70" y="11" width="198" height="22"/>
                                                         <autoresizingMask key="autoresizingMask"/>
-                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="vmess:// or ss:// or http://" usesSingleLineMode="YES" bezelStyle="round" id="MHF-nm-HG8">
+                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="vmess:// or ss:// or ssr:// or http://" usesSingleLineMode="YES" bezelStyle="round" id="MHF-nm-HG8">
                                                             <font key="font" usesAppearanceFont="YES"/>
                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
